# install_gpt4all

./: .gitignore  Makefile  README.md  _voice_interface.sh  build_dependencies.sh  install_deps.sh  install_gpt4all.sh  install_voice.sh  listen_interface.sh  pyproject.toml  runtime_deps.sh  test.sh  voice_interface.py  voice_interface.sh
docs/reference/: _project_config.sh  build_dependencies.sh  runtime_deps.sh
gpt4all_voice/: __init__.py  __main__.py  gpt4all_voice.py  schema.py  transcriber.py  vad.py
