[tool.poetry]
name = "gpt4all-voice"
version = "0.1.0"
description = ""
authors = ["Joe DiPilato"]
readme = "README.md"
packages = [{include = "gpt4all_voice"}]

[tool.poetry.dependencies]
python = "~3.10"
whisper = "^1.1.10"
sounddevice = "^0.4.6"
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.2.2"
pydocstyle = "^6.3.0"
pycodestyle = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
